--- a/lib/stylesheet/core.css
+++ b/lib/stylesheet/core.css
@@ -2,4 +2,30 @@
     Created on : 18/02/2023, 11:28:30
     Author     : Spell Master
 */
+@font-face {font-family: 'roboto'; src: url('../fonts/roboto.ttf')}
 
+html {
+    -webkit-tap-highlight-color: transparent
+}
+body {
+    color: #444444;
+    background-color: #333333;
+    font-family: 'roboto';
+    font-size: 16px
+}
+
+
+#banner .slide-item {
+    position: relative
+}
+#banner div[data-img] {
+    width: 100%;
+    height: 100%;
+    max-height: 400px;
+    background-size: 100% 100%;
+    aspect-ratio: 16 / 9;
+}
+
+#banner div[data-str] {
+    position: absolute;
+}
